--- a/style.css
+++ b/style.css
@@ -2,10 +2,6 @@
     box-sizing: border-box;
 }
 
-html {
-    scroll-behavior: smooth;
-}
-
 body {
     margin: 0;
     padding: 0;
@@ -17,6 +13,7 @@ body {
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
+    position: relative;
 }
 
 .logo {
@@ -27,4 +24,37 @@ body {
     height: auto;
     max-width: 120px;
     max-height: 120px;
+}
+
+.cloud {
+    position: absolute;
+    top: 10px;
+    right: 0.05%;
+    transform: translateX(-50%);
+    width: 200px;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.cloud-img {
+    width: 100%;
+    height: auto;
+}
+
+.lightning-bolt {
+    position: absolute;
+    width: 100px;
+    height: auto;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    top: 70%;
+    left: 40%;
+    transform: translate(-50%, -50%);
+}
+
+.cloud:hover .lightning-bolt {
+    opacity: 1;
 }
