--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@ body {
 }
 
 .hero {
-    background-image: url(assets/images/hero-background.webp);
+    background-image: url(assets/images/jd-hero-background.webp);
     height: 100vh;
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     position: relative;
@@ -18,8 +18,8 @@ body {
 
 .logo {
     position: absolute;
-    top: 13%;
-    left: 12.5%;
+    top: 15%;
+    left: 8%;
     width: auto;
     height: auto;
     max-width: 120px;
