--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@ body {
 
 .cloud {
     position: absolute;
-    top: 10px;
-    right: 0.05%;
+    top: 9px;
+    left: 600px;
     transform: translateX(-50%);
     width: 200px;
     height: auto;
@@ -46,11 +46,11 @@ body {
 
 .lightning-bolt {
     position: absolute;
-    width: 100px;
+    width: 150px;
     height: auto;
     opacity: 0;
     transition: opacity 0.3s ease-in-out;
-    top: 70%;
+    top: 200px;
     left: 40%;
     transform: translate(-50%, -50%);
 }
