--- a/style.css
+++ b/style.css
@@ -61,10 +61,12 @@ body {
 @media screen and (max-width: 500px) {
     .hero {
       background-image: url(assets/images/jon-portfolio-mobile-background.webp);
-      width: 100%;
-      min-height: 100vh;
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
+    }
+
+    .cloud {
+        display: none;
     }
 }
